added all 15 jquery functions

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
     <nav>
-        <h1>BenardsChat</h1>
         <img src="./images/image (1).png" class="pfpicon">
     </nav>
     <div id="all">
         <div id="menu">
             <div id="pfp">
                 <div><img src="./images/image (1).png" alt="" class="img" /></div>
-                <p class="name">Merik Kuhn</p>
+                <title class="name">Merik Kuhn</title>
             </div>
-            <ul>
+            <ul class="tabs">
                 <li rel="tabs1" class="active">Home</li>
                 <li rel="tabs2">About</li>
             </ul>
