Finishing up project

--- a/index.html
+++ b/index.html
@@ -8,18 +8,29 @@
     <title>BenardsChat</title>
 </head>
 <body>
+    <div class="header">
+        <h3 class="headerName">Benards Chat</h3>
+    </div>
     <nav>
-        <img src="./images/image (1).png" class="pfpicon">
+        <img src="./images/image (1).png" class="pfpicon" id="opennav">
     </nav>
     <div id="all">
         <div id="menu">
+            <a id="close"><img src="./images/75519.png" class="close"></a>
             <div id="pfp">
                 <div><img src="./images/image (1).png" alt="" class="img" /></div>
                 <title class="name">Merik Kuhn</title>
             </div>
+            <br>
             <ul class="tabs">
-                <li rel="tabs1" class="active">Home</li>
-                <li rel="tabs2">About</li>
+                <br>
+                <li class="hobbie">Hobbies</li>
+                <br>
+                <li class="about">About</li>
+                <br>
+                <li class="loc">Location</li>
+                <br>
+                <li class="trip">Story of Trip</li>
             </ul>
 
         </div>
@@ -28,23 +39,18 @@
 
         <div class="main">
             <div id="tabs1" class="tabs active">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolores
-                    libero molestiae laudantium quaerat autem laborum tempore, tenetur
-                    inventore cum at ab sed optio voluptas atque labore repellendus fuga.
-                    Repellendus illum explicabo, non repudiandae harum consectetur ipsam
-                    laboriosam, soluta mollitia nam rerum labore magnam ratione enim at
-                    autem odio. Nihil, nemo! Totam obcaecati laudantium nulla ipsam,
-                    molestias nisi reiciendis magnam maiores perferendis ex nostrum.
-                    Consequuntur, aperiam debitis? Laboriosam, perferendis recusandae.
-                    Sapiente eos dignissimos voluptate assumenda repellat! Consequatur in
-                    ipsam corrupti, vitae expedita maiores repellat ad alias, voluptas
-                    unde quisquam incidunt eos, illum error sed! Quis ullam sint impedit
-                    dolorum iste.
+                <h1 class="Names">Hobbies:</h1>
+                <p class="texes">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum quia dicta corporis delectus aliquid
+                    vitae molestiae perspiciatis voluptate, maiores aspernatur ullam veritatis sunt quaerat? Vero
+                    excepturi sunt maxime necessitatibus quasi quisquam culpa. Fuga consequuntur hic dolorem mollitia,
+                    obcaecati ipsa iure.
                 </p>
             </div>
+            <br>
             <div id="tabs2">
-                <p>
+                <h1 class="Names">About:</h1>
+                <p class="textes">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident
                     iusto repudiandae cumque sint omnis laboriosam nisi fugiat architecto
                     adipisci dolores alias a quos esse earum eveniet ullam, dolorem vero
@@ -58,6 +64,19 @@
                     quasi maiores, explicabo labore. Adipisci dicta, iste reiciendis nobis
                     ad ullam dignissimos.
                 </p>
+            </div>
+            <br>
+            <div id="tabs3">
+                <h1 class="Names">Location:</h1>
+                <p class="textes">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, optio.</p>
+            </div>
+            <div id="tabs4">
+                <h1 class="Names">Trip:</h1>
+                <p class="textes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dicta impedit doloribus
+                    optio corporis nobis maiores amet consequuntur qui magni inventore voluptatum voluptates
+                    praesentium, obcaecati aut incidunt quia earum debitis. Reiciendis modi assumenda earum similique
+                    est accusamus placeat quam corrupti rerum quasi, sunt maxime laudantium repellendus quae saepe
+                    voluptates ut!</p>
             </div>
         </div>
     </div>
